# vtuber

./: .gitignore  live2d-models  model_dict.json  package-lock.json  package.json  pyproject.toml  run_server.py  server.js  tsconfig.json
.github/workflows/: fossa_scan.yml
data/index/: index_store.json
data/knowledge/: ejemplos_comunicacion.txt  funciones.txt  instrucciones_operacion.txt  persona.txt  preguntas_frecuentes.txt  tareas_ejemplo.txt
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/: main.js  package.json  preload.js
frontend/src/: App.vue
frontend/src/components/: Live2DWidget.vue  ModeSelector.vue  VRMViewer.vue
frontend/src/renderer/src/: App.tsx  main.tsx
frontend/src/renderer/src/context/: chat-history-context.tsx  websocket-context.tsx
frontend/src/renderer/src/services/: websocket-handler.tsx  websocket-service.tsx
src/open_llm_vtuber/: __init__.py  emotion_engine.py  lip_sync_engine.py  personality.py
src/open_llm_vtuber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/open_llm_vtuber/agent/: __init__.py  agent_runner.py  chat_agent.py  chat_hf_local.py  hf_multimodal.py
src/open_llm_vtuber/agent/agents/: agent_runner.py
src/open_llm_vtuber/connectors/: discord_connector.py  filter_utils.py  slack_connector.py  stream_bot.py  youtube_connector.py
src/open_llm_vtuber/memory/: __init__.py  episodic_memory.py  memory_manager.py  semantic_memory.py  summary_memory.py
src/open_llm_vtuber/tts/: tts_factory.py
