[project]
name = "open-llm-vtuber"
version = "1.1.4"
description = "Talk to any LLM with hands‑free voice interaction, voice interruption, and Live2D running locally across platforms"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "aiofiles",
    "anthropic>=0.40.0",
    "azure-cognitiveservices-speech>=1.41.1",
    "azure-core",
    "bcrypt",
    "build",
    "cffi",
    "cfgv",
    "chardet>=5.2.0",
    "chromadb[duckdb]>=0.5.0",
    "click",
    "colorama",
    "coloredlogs",
    "comtypes",
    "distro",
    "duckdb>=0.8.0,<0.9.0",
    "edge-tts>=7.0.0",
    "fastapi[standard]>=0.115.9",
    "faiss-cpu",
    "fer",
    "filelock",
    "flatbuffers",
    "fsspec",
    "grpcio",
    "groq>=0.13.0",
    "httpx>=0.28.1",
    "identify",
    "importlib-resources",
    "jinja2",
    "jiter",
    "jsonschema",
    "kubernetes",
    "langdetect>=1.0.9",
    "langchain==0.2.4",
    "librosa",
    "llama-index==0.12.42",
    "llama-index-agent-openai",
    "llama-index-cli",
    "llama-index-core",
    "llama-index-embeddings-openai",
    "llama-index-indices-managed-llama-cloud",
    "llama-index-llms-openai",
    "llama-index-multi-modal-llms-openai",
    "llama-index-program-openai",
    "llama-index-question-gen-openai",
    "llama-index-readers-file",
    "llama-index-readers-llama-parse",
    "loguru>=0.7.2",
    "mmh3",
    "networkx",
    "nltk",
    "numpy>=1.26.4,<2",
    "onnxruntime>=1.20.1",
    "openai>=1.57.4",
    "openai-whisper",
    "opencv-python-headless",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-sdk",
    "overrides",
    "phonemizer",
    "pillow",
    "posthog",
    "pre-commit>=4.1.0",
    "praat-parselmouth",
    "protobuf",
    "pyaudio",
    "pyAudioAnalysis",
    "pyttsx3>=2.98",
    "python-dotenv",
    "pypiwin32",
    "pypika",
    "pysbd>=0.3.4",
    "pywin32",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich",
    "ruamel-yaml>=0.18.10",
    "ruamel-yaml-clib",
    "ruff>=0.8.6",
    "scikit-learn",
    "scipy>=1.14.1",
    "sentence-transformers==2.7.0",
    "sherpa-onnx>=1.10.39",
    "silero-vad>=5.1.2",
    "six",
    "soundfile>=0.12.1",
    "srt",
    "starlette",
    "sympy",
    "tabulate",
    "tokenizers",
    "tomli>=2.2.1",
    "torch>=2.6.0",
    "torchaudio",
    "transformers",
    "tqdm>=4.67.1",
    "tzdata",
    "typer",
    "uv",
    "uvicorn[standard]>=0.33.0",
    "websocket-client>=1.8.0",
    "win32-setctime",

    # Added new dependencies:
    "pgvector",
    "psycopg2-binary",
    "discord.py",
    "slack-sdk",
    "twitchio",
    "google-api-python-client",
    "oauth2client",
    "openai-agents",
]
